fix: numbers of writes bug